Fix whitespace in admonition titles

--- a/src/styles/admonitions.css
+++ b/src/styles/admonitions.css
@@ -33,6 +33,7 @@
         height: 1lh;
         font-family: var(--winter-admonition-title-font);
         font-size: var(--winter-admonition-title-font-size);
+        white-space: pre-wrap;
         margin-block: 0;
 
         &::before {
@@ -57,6 +58,11 @@
             font-feature-settings: "liga";
             -webkit-font-smoothing: antialiased;
             user-select: none;
+        }
+
+        /* Remove underlines from <abbr> in admonition titles */
+        & abbr {
+            border-bottom: none;
         }
     }
 
